dark mode fix

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -262,91 +262,6 @@ label {
     100%{bottom: 2rem;}
 }
 
-/* Dark mode via https://derekkedziora.com/blog/dark-mode-revisited */
-@media (prefers-color-scheme: dark) {
-	:root[data-theme="dark"] {
-        --sky: url(../img/sky_bg_dark.webp);
-        --clouds: transparent url(../img/clouds_dark.webp) repeat-x left top;
-        --mainbg: rgba(58, 53, 63, 0.90);
-        --mainbg_border: 0.125rem solid #302b30;
-        --mainbg_outline: 0.125rem solid #4f464f;
-        --font: #fffcfa;
-        --links: #f79b9b;
-        --selection: #ffd7d752;
-        --header: url(../img/header_dark.webp);
-        --h1: url(../img/pattern_01_dark.webp);
-        --h1_border: 0.125rem solid #302b30;
-        --h2: url(../img/pattern_02_dark.webp);
-        --h2_border: 0.125rem solid #302b30;
-        --update: #443b45;
-        --scrollbar: #302b30 #4f464f;
-        --skycolour: #564b55;
-        --ul: url(../img/bullet_dark.webp);
-        --cursor: url(../img/cursor_dark.webp), auto;
-        --pointer: url(../img/pointer_dark.webp), pointer;
-        --button:#554c55;
-        --buttonhover: #302b30;
-	}
-
-    :root[data-theme="light"] {
-        --sky: url(../img/sky_bg.webp);
-        --clouds: transparent url(../img/clouds.webp) repeat-x left top;
-        --mainbg: rgba(255, 252, 250, 0.90);
-        --mainbg_border: 0.125rem solid #dfa097;
-        --mainbg_outline: 0.125rem solid #ffdad1;
-        --font: #6a5353;
-        --links: #4171B9;
-        --selection: #ffb2a44f;
-        --header: url(../img/header.webp);
-        --h1: url(../img/pattern_01.webp);
-        --h1_border: 0.125rem solid #eba894;
-        --h2: url(../img/pattern_02.webp);
-        --h2_border: 0.125rem solid #f8ccbf;
-        --update: #fff6f4;
-        --scrollbar: #dfa097 #ffffff;
-        --skycolour: #fff0e8;
-        --ul: url(../img/bullet.webp);
-        --cursor: url(../img/cursor.webp), auto;
-        --pointer: url(../img/pointer.webp), pointer;
-        --button:#ffebe4;
-        --buttonhover: #f8ccbf;
-	}
-}
-
-@media (max-width: 800px) {
-    .flex {
-        display: inline;
-    }
-    #nav {
-        width: unset !important;
-    }
-    #stats {
-        width: unset !important;
-    }
-    #pagedoll {
-        display: none;
-    }
-    #minibox {
-        max-width: unset !important;
-    }
-    #minibox2 {
-        max-width: unset !important;
-    }
-    .box_header {
-        height: 6rem;
-        background-size: cover;
-    }
-  }
-
-  @media (prefers-reduced-motion) {
-    #pagedoll {
-        display: none;
-    }
-    .clouds {
-        display: none;
-    }
-  }
-
 /* Comment Widget */
 /* A lot of this code was taken from virtualobserver's base code. */
 
@@ -470,3 +385,112 @@ label {
     margin-right: 0.5rem;
     margin-left:  0.5rem;
 }
+
+
+/* Dark mode via https://derekkedziora.com/blog/dark-mode-revisited */
+@media (prefers-color-scheme: dark) {
+    :root {
+        --sky: url(../img/sky_bg_dark.webp);
+        --clouds: transparent url(../img/clouds_dark.webp) repeat-x left top;
+        --mainbg: rgba(58, 53, 63, 0.90);
+        --mainbg_border: 0.125rem solid #302b30;
+        --mainbg_outline: 0.125rem solid #4f464f;
+        --font: #fffcfa;
+        --links: #f79b9b;
+        --selection: #ffd7d752;
+        --header: url(../img/header_dark.webp);
+        --h1: url(../img/pattern_01_dark.webp);
+        --h1_border: 0.125rem solid #302b30;
+        --h2: url(../img/pattern_02_dark.webp);
+        --h2_border: 0.125rem solid #302b30;
+        --update: #443b45;
+        --scrollbar: #302b30 #4f464f;
+        --skycolour: #564b55;
+        --ul: url(../img/bullet_dark.webp);
+        --cursor: url(../img/cursor_dark.webp), auto;
+        --pointer: url(../img/pointer_dark.webp), pointer;
+        --button:#554c55;
+        --buttonhover: #302b30;
+    }
+	:root[data-theme="dark"] {
+        --sky: url(../img/sky_bg_dark.webp);
+        --clouds: transparent url(../img/clouds_dark.webp) repeat-x left top;
+        --mainbg: rgba(58, 53, 63, 0.90);
+        --mainbg_border: 0.125rem solid #302b30;
+        --mainbg_outline: 0.125rem solid #4f464f;
+        --font: #fffcfa;
+        --links: #f79b9b;
+        --selection: #ffd7d752;
+        --header: url(../img/header_dark.webp);
+        --h1: url(../img/pattern_01_dark.webp);
+        --h1_border: 0.125rem solid #302b30;
+        --h2: url(../img/pattern_02_dark.webp);
+        --h2_border: 0.125rem solid #302b30;
+        --update: #443b45;
+        --scrollbar: #302b30 #4f464f;
+        --skycolour: #564b55;
+        --ul: url(../img/bullet_dark.webp);
+        --cursor: url(../img/cursor_dark.webp), auto;
+        --pointer: url(../img/pointer_dark.webp), pointer;
+        --button:#554c55;
+        --buttonhover: #302b30;
+	}
+
+    :root[data-theme="light"] {
+        --sky: url(../img/sky_bg.webp);
+        --clouds: transparent url(../img/clouds.webp) repeat-x left top;
+        --mainbg: rgba(255, 252, 250, 0.90);
+        --mainbg_border: 0.125rem solid #dfa097;
+        --mainbg_outline: 0.125rem solid #ffdad1;
+        --font: #6a5353;
+        --links: #4171B9;
+        --selection: #ffb2a44f;
+        --header: url(../img/header.webp);
+        --h1: url(../img/pattern_01.webp);
+        --h1_border: 0.125rem solid #eba894;
+        --h2: url(../img/pattern_02.webp);
+        --h2_border: 0.125rem solid #f8ccbf;
+        --update: #fff6f4;
+        --scrollbar: #dfa097 #ffffff;
+        --skycolour: #fff0e8;
+        --ul: url(../img/bullet.webp);
+        --cursor: url(../img/cursor.webp), auto;
+        --pointer: url(../img/pointer.webp), pointer;
+        --button:#ffebe4;
+        --buttonhover: #f8ccbf;
+	}
+}
+
+@media (max-width: 800px) {
+    .flex {
+        display: inline;
+    }
+    #nav {
+        width: unset !important;
+    }
+    #stats {
+        width: unset !important;
+    }
+    #pagedoll {
+        display: none;
+    }
+    #minibox {
+        max-width: unset !important;
+    }
+    #minibox2 {
+        max-width: unset !important;
+    }
+    .box_header {
+        height: 6rem;
+        background-size: cover;
+    }
+  }
+
+  @media (prefers-reduced-motion) {
+    #pagedoll {
+        display: none;
+    }
+    .clouds {
+        display: none;
+    }
+  }
